--- a/30 - Whack A Mole/style.css
+++ b/30 - Whack A Mole/style.css
@@ -21,6 +21,16 @@ h1 {
   margin-bottom: 0;
 }
 
+button {
+  margin: 1rem auto;
+  display: block;
+  background: #734b02;
+  text-align: center;
+  font-size: 4rem;
+  color: white;
+  font-family: 'Amatic SC', cursive;
+}
+
 .score {
   background:rgba(255,255,255,0.2);
   padding:0 3rem;
